# api/openapi.yaml
@@ -268,6 +268,53 @@ paths:
           description: Unexpected error
       summary: Update license features for the given key ID, replace the previousely
         defined ones
+  /prolongLicensedFeaturesForKey/{keyId}:
+    post:
+      operationId: prolongLicensedFeaturesForKey
+      parameters:
+      - description: Key id to that the currently availble licensed features pertains
+          to
+        explode: false
+        in: path
+        name: keyId
+        required: true
+        schema:
+          type: string
+        style: simple
+      - description: Number of months to add to the expiration term of features
+        explode: true
+        in: query
+        name: byMonths
+        required: false
+        schema:
+          minimum: 1
+          type: integer
+        style: form
+      - description: Final expiration term of license features
+        explode: true
+        in: query
+        name: to
+        required: false
+        schema:
+          format: date
+          type: string
+        style: form
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LicensedFeatures'
+      responses:
+        202:
+          description: Null response. Features updated
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unexpected error
+      summary: Update license features for the given key ID, replace the previousely
+        defined ones
 components:
   schemas:
     HardwareKey:
